# blog-python

./: README.md  skaffold.yaml
client/: Dockerfile  package-lock.json
client/src/: CommentList.js
comments/: Dockerfile  pyproject.toml
comments/comments/: app.py
event-bus/: Dockerfile  pyproject.toml
event-bus/event-bus/: app.py
infra/k8s/: client-depl.yaml  comments-depl.yaml  event-bus-depl.yaml  moderation-depl.yaml  posts-depl.yaml  posts-srv.yaml  posts.yaml.old  query-depl.yaml
moderation/: Dockerfile  pyproject.toml
moderation/moderation/: app.py
posts/: Dockerfile  pyproject.toml
posts/posts/: app.py
query/: Dockerfile  pyproject.toml
query/query/: app.py
