[tool.poetry]
name = "event-bus"
version = "0.1.0"
description = ""
authors = ["Juan Gremes <juan.gremes@affirm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.3"
flask-cors = "^3.0.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
